Opened 14 years ago
Closed 14 years ago
#6985 closed bug (fixed)
Layout of controls wrong when resizing MediaConverter window
Reported by: | stippi | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/MediaConverter | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
The menu bar and the status bar should stay at a fixed size, but spacing is added to them vertically.
Change History (3)
comment:1 by , 14 years ago
Status: | new → in-progress |
---|
comment:2 by , 14 years ago
comment:3 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev39855.