Improved layout of controls and more cleanup. There is now a splitter between the source file list and the controls on the right, and ticket #6985 is fixed. A lot of issues and quirks remain with this application.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39855 a95241bf-73f2-0310-859d-f6bbb57e9c96